# lab3

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
lab3/: main.py
