[tool.poetry]
name = "lab3"
version = "0.1.0"
description = ""
authors = ["bashveev_yuri <bashveevua@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
faust-streaming = "^0.12.1"
confluent-kafka = "^2.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
